--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,12 @@
         </dependency>
         <!--SpringBoot整合Mybatis结束-->
 
+        <!--springboot整合redis-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
