--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,31 @@
             <version>2.1.3.RELEASE</version>
         </dependency>
 
+        <!--SpringBoot整合elasticsearch开始-->
+        <!--特别注意：maven版本号不能过高，大版本号与需要连接ES大版本号一致即可，不需要完全对应，
+        如ES版本号为7.4.0，maven版本号为7.x.x即可，如果maven版本号也是7.4.0，会有问题，后续再研究
+        一般maven版本选取不选取新的，选取较新且使用者较多的版本最为稳妥-->
+        <!-- https://mvnrepository.com/artifact/org.elasticsearch/elasticsearch -->
+        <dependency>
+            <groupId>org.elasticsearch</groupId>
+            <artifactId>elasticsearch</artifactId>
+            <version>7.1.1</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.elasticsearch.client/elasticsearch-rest-high-level-client -->
+        <dependency>
+            <groupId>org.elasticsearch.client</groupId>
+            <artifactId>elasticsearch-rest-high-level-client</artifactId>
+            <version>7.1.1</version>
+        </dependency>
+        <!--SpringBoot整合elasticsearch结束-->
+
+        <!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.58</version>
+        </dependency>
 
     </dependencies>
 
